--- a/style/scss/_header.scss
+++ b/style/scss/_header.scss
@@ -11,7 +11,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    align-items: center;
     width: 100vw;
 
     &__img {
@@ -24,15 +23,16 @@
     position: absolute;
     width: 25rem;
     background-color: white;
-    height: 50rem;
+    height: 100vh;
+    min-height: 50rem;
     text-align: center;
     z-index: 100;
     right: 0;
     top: 0;
-    background-color: rgb(240, 232, 232);
     padding: 2rem 1rem;
     transition: transform .3s ease-in-out;
     grid-column: 2/3;
+    margin-bottom: -5rem;
 
     &--disactive {
         transform: translateX(25rem);
@@ -44,7 +44,11 @@
         width: 100%;
         transform: translateX(0);
         height: 100%;
+        min-height: 100%;
+        margin-bottom: 0rem;
     }
+
+
 }
 
 .c-socials {
@@ -61,11 +65,18 @@
     @media #{$laptop} {
         display: none;
     }
+
+    @media (max-height: 490px) {
+        display: none;
+    }
+
 }
 
 .c-menu-nav {
     font-size: 2rem;
     letter-spacing: 0.2rem;
+    height: 100%;
+
 
     &__item {
         padding: 1.5rem 0;
@@ -77,6 +88,10 @@
         &--active {
             border-bottom: 1px solid $default;
         }
+    }
+
+    @media (max-height: 490px) {
+        font-size: 1rem;
     }
 
     @media #{$laptop} {
@@ -103,7 +118,7 @@
 .c-contact-ham {
     display: flex;
     justify-content: space-between;
-    margin-top: 4rem;
+    margin-top: -10rem;
 
     @media #{$laptop} {
         display: none;
@@ -119,6 +134,7 @@
     color: $default;
     border: 0;
     margin: 0;
+    z-index: 99;
     transition: transform .3s ease-in-out;
 
     &--active {
@@ -227,29 +243,57 @@
             object-fit: scale-down;
             height: 100%;
         }
+    }
 
-        @media #{$laptop} {
+    @media #{$laptop} {
 
-            &__title {
-                grid-column: 2/9;
-            }
-
-            &__img-wrapper {
-                right: -40rem;
-            }
+        &__title {
+            grid-column: 2/9;
         }
 
-        @media #{$wide} {
-            &__title {
-                grid-column: 2/10;
-            }
-        }
-
-        @media #{$super-wide} {
-            &__title {
-                grid-column: 2/8;
-            }
+        &__img-wrapper {
+            right: -40rem;
         }
     }
 
+    @media #{$wide} {
+        &__title {
+            grid-column: 2/10;
+        }
+    }
+
+    @media #{$super-wide} {
+        &__title {
+            grid-column: 2/8;
+        }
+    }
+
+    @media (max-height: 490px) {
+
+        &__img,
+        &__phone-icon {
+            display: none;
+        }
+
+        &__number-wrapper {
+            margin-top: 0;
+        }
+    }
+
+}
+
+.bg-menu {
+    background-color: rgba(90, 89, 89, .9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    transition: .5s ease-in-out;
+    transform: translateX(-100%);
+}
+
+.bg-menu--active {
+    transform: translateX(0);
 }
