--- a/style/scss/_zabiegi.scss
+++ b/style/scss/_zabiegi.scss
@@ -1,3 +1,10 @@
+.section-subtitle {
+    text-align: start;
+    padding-left: 5%;
+    margin-bottom: 2rem;
+    margin-top: 10rem;
+}
+
 .c-cards {
     margin-bottom: 5rem;
 }
