--- a/style/css/subpages.css
+++ b/style/css/subpages.css
@@ -1,15 +1,24 @@
-body {
-  overflow-x: hidden;
+.c-nav {
+  width: 100%;
   padding-top: 1rem;
+  position: relative;
 }
 
 .c-menu {
-  height: 100vh;
+  overflow: hidden;
+}
+
+.c-menu--disactive {
+  width: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 @media (min-width: 1024px) {
   .c-menu {
     height: auto;
+    width: 100%;
+    padding: 2rem 1rem;
   }
 }
 
@@ -20,6 +29,10 @@ body {
   -ms-grid-row: 1;
   grid-row: 1;
   font-size: calc(50px + (72 - 24) * ((100vw - 300px) / (1600 - 300)));
+}
+
+.l-footer {
+  margin-top: 5rem;
 }
 
 .c-about {
@@ -52,7 +65,6 @@ body {
 
 .c-about__text {
   padding: 2%;
-  max-width: 50%;
 }
 
 @media (min-width: 1024px) {
@@ -83,7 +95,18 @@ body {
   margin-bottom: 2rem;
 }
 
+.section-subtitle {
+  text-align: start;
+  padding-left: 5%;
+  margin-bottom: 2rem;
+  margin-top: 10rem;
+}
+
 .c-cards {
   margin-bottom: 5rem;
+}
+
+.c-map {
+  margin-bottom: -5rem;
 }
 /*# sourceMappingURL=subpages.css.map */
