--- a/style/scss/_header.scss
+++ b/style/scss/_header.scss
@@ -30,12 +30,14 @@
     right: 0;
     top: 0;
     padding: 2rem 1rem;
-    transition: transform .3s ease-in-out;
+    transition: transform .3s ease-in-out,
+        width .3s ease-in-out;
     grid-column: 2/3;
     margin-bottom: -5rem;
 
     &--disactive {
         transform: translateX(25rem);
+
     }
 
     @media #{$laptop} {
@@ -80,6 +82,7 @@
 
     &__item {
         padding: 1.5rem 0;
+        white-space: nowrap;
     }
 
     &__link {
@@ -119,6 +122,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: -10rem;
+    font-size: 1rem;
 
     @media #{$laptop} {
         display: none;
